--- a/thesis/sections/risc-v.tex
+++ b/thesis/sections/risc-v.tex
@@ -91,7 +91,7 @@ On the user-level without any extension, there are no \glspl{csr} present so we 
 \subsubsection{Instructions}
 
 \paragraph{Integer arithmetic and Boolean instructions}
-The base integer instruction set provides instructions for plus and minus, integer comparisons and the Boolean operators AND, OR and XOR.
+The base integer instruction set provides instructions for plus and minus, integer comparisons and the Boolean operators \rv{And}, \rv{Or} and \rv{Xor}.
 Most of these instructions are implemented in two version: a register version (or R-type instruction) and an immediate version (or I-type instruction).
 In the first case the two operands are given as registers and in the second case one operand is given as register and the other as an immediate value read from memory.
 In either case the value is stored in a destination register.
