--- a/thesis/securem.cls
+++ b/thesis/securem.cls
@@ -41,7 +41,7 @@
     alsodigit={-},
 }
 \lstdefinelanguage{rv}{
-    morekeywords=[1]{ADDI,SLTI,SLTIU,ANDI,ORI,XORI,SLLI,SRLI,SRAI,LUI,AUIPC,ADD,SLT,SLTU,AND,OR,XOR,SLL,SRL,SUB,SRA,JAL,JALR,BEQ,BNE,BLT,BLTU,BGE,BGEU,LW,LH,LHU,LB,LBU,SW,SH,SB,CSRRW,CSRRS,CSRRC,CSRRWI,CSRRSI,CSRCI,ECALL,EBREAK,MRET,URET},
+    morekeywords=[1]{ADDI,SLTI,SLTIU,ANDI,ORI,XORI,SLLI,SRLI,SRAI,LUI,AUIPC,ADD,SLT,SLTU,AND,OR,XOR,SLL,SRL,SUB,SRA,JAL,JALR,BEQ,BNE,BLT,BLTU,BGE,BGEU,LW,LH,LHU,LB,LBU,SW,SH,SB,CSRRW,CSRRS,CSRRC,CSRRWI,CSRRSI,CSRCI,ECALL,EBREAK,MRET,URET,NOP},
     sensitive=false,
     morecomment=[l]{\#},
 }
