--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -77,13 +77,13 @@
 \newacronym{pmp}{PMP}{physical memory protection}
 \newacronym{hdl}{HDL}{hardware description language}
 
-\newacronym{jal}{JAL}{jump and link}
-\newacronym{jalr}{JALR}{jump and link register}
-\newacronym{ecall}{ECALL}{environment call}
-\newacronym{ebreak}{EBREAK}{environment breakpoint}
-\newacronym{mret}{MRET}{machine trap return}
-\newacronym{uret}{URET}{user trap return}
-\newacronym{nop}{NOP}{no-operation}
+\newacronym{jal}{\rv{Jal}}{jump and link}
+\newacronym{jalr}{\rv{Jalr}}{jump and link register}
+\newacronym{ecall}{\rv{Ecall}}{environment call}
+\newacronym{ebreak}{\rv{Ebreak}}{environment breakpoint}
+\newacronym{mret}{\rv{Mret}}{machine trap return}
+\newacronym{uret}{\rv{Uret}}{user trap return}
+\newacronym{nop}{\rv{Nop}}{no-operation}
 
 % timer and performance counting CSRs
 \newacronym{mtime}{mtime}{machine time}
