--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -174,6 +174,7 @@
 \input{sections/model.tex}
 \input{sections/checking.tex}
 \input{sections/results.tex}
+\input{sections/related.tex}
 \input{sections/conclusion.tex}
 
 \bibliography{references}
