thesis: Add background section about muZ and Datalog

--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -130,3 +130,24 @@
     year = {2004},
     isbn = {0-321-22862-6}
 }
+
+@book{Date00,
+    title = {An Introduction to Database Systems},
+    author = {Date, Chris J.},
+    address = {Reading, Masschusetts},
+    publisher = {Addison-Wesley},
+    year = {2000},
+    edition = {7},
+    isbn = {0-201-38590-2}
+}
+
+@inproceedings{Moura08,
+    author = {de Moura, Leonardo and Bjørner, Nikolaj},
+    year = {2008},
+    month = {04},
+    pages = {337-340},
+    title = {Z3: an efficient SMT solver},
+    volume = {4963},
+    journal = {Tools and Algorithms for the Construction and Analysis of Systems},
+    doi = {10.1007/978-3-540-78800-3_24}
+}
