--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -54,6 +54,18 @@
     name={\textsc{Promela}},
     description={}
 }
+\newglossaryentry{spacer}{
+    name={\textsc{Spacer}},
+    description={}
+}
+\newglossaryentry{datalog}{
+    name={\textsc{Datalog}},
+    description={}
+}
+\newglossaryentry{z3}{
+    name={\textsc{z3}},
+    description={}
+}
 
 % TODO: descriptions
 \newacronym{risc}{RISC}{reduced instruction set computer}
@@ -76,6 +88,8 @@
 \newacronym{pma}{PMA}{phsyical memory attribute}
 \newacronym{pmp}{PMP}{physical memory protection}
 \newacronym{hdl}{HDL}{hardware description language}
+\newacronym{2bmc}{2BMC}{Bounded Model Checking-Based Model Checking}
+\newacronym{cegar}{CEGAR}{Counterexample Guided Abstaction Refinement}
 
 \newacronym{jal}{\rv{Jal}}{jump and link}
 \newacronym{jalr}{\rv{Jalr}}{jump and link register}
