thesis: Change bibliography style to apalike

--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -192,6 +192,6 @@
 \input{sections/conclusion.tex}
 
 \bibliography{references}
-\bibliographystyle{alpha}
+\bibliographystyle{apalike}
 
 \end{document}
